kubernetes/services/element-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: element-web
  namespace: element-web
spec:
  selector:
    app.kubernetes.io/name: element-web
  ports:
    - name: http
      port: 80
      targetPort: http
